# sovereign-vllm

./: AGENTS.md  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  constraints.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
agent-dist/: agent-wrapper.sh  agent.yaml.example  com.lazarus.sovereign-runtime-agent.plist  install-agent.sh  uninstall-agent.sh
docker/cpu/: Dockerfile
docker/cuda/: Dockerfile
docker/metal/: Dockerfile
docs/: metal-native-backend.md
lazarus/: __init__.py  attribution.py
lazarus/agent/: __init__.py  config.py  server.py
lazarus/api/: __init__.py
lazarus/appliance/: __init__.py  api.py  config.py  healthcheck.py  launcher.py  manifest.py  state.py
lazarus/appliance/backends/: __init__.py  agent.py  base.py  fake.py  roleclient.py  vllm_engine.py
lazarus/models/: __init__.py
lazarus/models/embedding/: __init__.py
lazarus/models/embedding/lco_omni/: __init__.py  model.py
lazarus/multi_role/: __init__.py
patches/: 0001-gate-cpu-moe-bindings-on-apple.patch  0002-vllm-metal-quantize-on-load.patch  README.md
tests/: conftest.py  test_agent.py  test_appliance_api.py  test_attribution.py  test_config.py  test_healthcheck.py  test_package.py  test_state.py  test_vllm_backend.py
