[project]
name = "sovereign-runtime"
version = "0.1.0rc3"
description = "Lazarus Sovereign Runtime appliance layer over vLLM"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "THIRD_PARTY_NOTICES.md"]
authors = [
    { name = "Eric Hartford", email = "eric.hartford@lazarusai.com" },
]
requires-python = ">=3.11"
dependencies = [
    "pyyaml==6.0.3",
    "jsonschema==4.26.0",
    "pydantic==2.13.4",
    "fastapi==0.136.3",
    "uvicorn==0.51.0",
    "httpx==0.28.1",
    "prometheus-client==0.24.1",
]

[project.optional-dependencies]
# The inference engine is an extra so the appliance layer can be developed and
# unit-tested on hosts that cannot install vLLM (e.g. macOS). Keep the pin in
# sync with constraints.txt.
engine = [
    "vllm==0.25.0",
]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.21",
]
# Audio embedding inputs (M12). Deliberately NOT vllm[audio]: that extra pulls
# in torchcodec, whose wheel dlopens system ffmpeg libs and raises OSError on
# hosts without them (vLLM only guards ImportError, so the engine dies).
# soundfile bundles libsndfile and covers the WAV decode path; soxr covers
# resampling. Without these the appliance still runs — the modality probe
# simply never advertises audio.
audio = [
    "soundfile==0.14.0",
    "soxr==1.1.0",
]

[project.entry-points."vllm.platform_plugins"]
# Native Metal (PyTorch-MPS) platform: runs vLLM's native torch models on the
# Apple GPU with QuixiCore-backed attention. See docs/metal-native-backend.md.
mps_native = "lazarus.platforms.mps:register"

[project.scripts]
run-sovereign-runtime = "lazarus.appliance.launcher:main"
sovereign-runtime-healthcheck = "lazarus.appliance.healthcheck:main"
sovereign-runtime-agent = "lazarus.agent.server:main"

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lazarus"]

[tool.ruff]
line-length = 100
